remove old code. Fix form radio buttons spacing

--- a/style.css
+++ b/style.css
@@ -328,6 +328,10 @@ footer p {
   padding-bottom: 2em;
 }
 
+.form-check {
+  margin-bottom: 0.5em;
+}
+
 #reason {
   margin-top: 2em;
 }
